--- a/Project_one/Intro_to_html/index.html
+++ b/Project_one/Intro_to_html/index.html
@@ -7,7 +7,7 @@
     <title>Hello World</title>
     <style>
         body{
-            background-color: silver;
+            background-color:darkslategrey
         }
         
        img {
