--- a/Project_one/index.html
+++ b/Project_one/index.html
@@ -10,7 +10,7 @@
     <h1>Basic Web Project Page</h1>
     <ul>
     
-        <li><a href="Intro_to_html/index.html" target="_blank">Intro_to_html</a></li>
+        <li><a href="intro_to_html/index.html" target="_blank">intro_to_html</a></li>
     </ul>
     
 </body>
