--- a/Project_one/index.html
+++ b/Project_one/index.html
@@ -4,15 +4,12 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Basic Web Project page</title>
+    <title>Basic Web Project Page</title>
 </head>
 <body>
     <h1>Basic Web Project Page</h1>
     <ul>
-    
-        <li><a href="intro_to_html/index.html" target="_blank">intro_to_html</a></li>
+    <li>Introduction to html</li>
     </ul>
-    
 </body>
-
 </html>
