--- a/Project_one/index.html
+++ b/Project_one/index.html
@@ -9,7 +9,7 @@
 <body>
     <h1>Basic Web Project Page</h1>
     <ul>
-    <li>Introduction to html</li>
+    <li><a href="intro_to_html/index.html" target="_blank">Intro to HTML</a></li>
     </ul>
 </body>
 </html>
