--- a/Project_one/index.html
+++ b/Project_one/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Basic Web Project Page</title>
+    <title>Basic Web Project page</title>
 </head>
 <body>
     <h1>Basic Web Project Page</h1>
