New link to site

--- a/index.html
+++ b/index.html
@@ -4,12 +4,12 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Basic Web Project Page</title>
+    <title>Basic Web Project page</title>
 </head>
 <body>
     <h1>Basic Web Project Page</h1>
     <ul>
-    <li>Introduction to html</li>
+    <li><a href="intro_to_html/index.html" target="_blank">Intro to HTML</a></li>
     </ul>
 </body>
 </html>
