--- a/Project_one/intro_to_html/index.html
+++ b/Project_one/intro_to_html/index.html
@@ -7,11 +7,11 @@
     <title>Hello World/Intro to html</title>
     <style>
     Body {
-        background-color:darkgrey}
+        background-color:darkgrey
+    }
     img {
         10%
-    }
-
+        }               
     </style>
 </head>
 <body>
@@ -35,7 +35,7 @@ As the climber climbs, the belayer “feeds” him slack in the rope, and manual
     <hr>
     <a href="https://www.mountainproject.com/" target="_blank">Mountain Project</a>
     <a href="https://www.climbing.com/" target="_blank">Climbing Website</a>
-    
+
     <p>&copy;2023 Hello World/Intro to html</p>   
 </body>
 </html>
