--- a/Project_one/intro_to_html/index.html
+++ b/Project_one/intro_to_html/index.html
@@ -9,11 +9,11 @@
     Body {
         background-color:darkgrey
     }
-    img { width: 
-        10%;
-
-    }
-    </style>
+    
+    img {
+        width: 100%;
+    }   
+</style>
 </head>
 <body>
     <h1>The Sport of Climbing</h1>
