--- a/Project_one/intro_to_html/index.html
+++ b/Project_one/intro_to_html/index.html
@@ -9,15 +9,17 @@
     Body {
         background-color:darkgrey
     }
+    
     img {    
-       width:100%;
+       width: 10%;
     }
-    </style>
+
+</style>
 </head>
 <body>
     <h1>The Sport of Climbing</h1>
     <hr>
-    <img src="images/Sportclimbing.jpg" alt="Rope through carabiners">
+    <img src="images/Sportclimbing3.jpg" alt="Rope through carabiners">
     <hr>
     <h2>Welcome to my first site!</h2>
 
