--- a/Project_one/intro_to_html/index.html
+++ b/Project_one/intro_to_html/index.html
@@ -10,10 +10,10 @@
         background-color:darkgrey
     }
     
-    img {    
+    img {
        width: 80%;
     }
- /style>
+ <style>
 </head>
 <body>
     <h1>The Sport of Climbing</h1>
