--- a/index.html
+++ b/index.html
@@ -7,19 +7,17 @@
     <title>Hello World/Intro to html</title>
     <style>
     Body {
-        background-color:darkgrey
-    }
-    
-    img {    
-       width: 80%;
+        background-color:darkgrey}
+    img {
+        10%
     }
 
-</style>
+    </style>
 </head>
 <body>
     <h1>The Sport of Climbing</h1>
     <hr>
-    <img src="images/Sportclimbing3.jpg" alt="Rope through carabiners">
+    <img src="images/Sportclimbing.jpg" alt="Rope through carabiners">
     <hr>
     <h2>Welcome to my first site!</h2>
 
@@ -37,7 +35,7 @@ As the climber climbs, the belayer “feeds” him slack in the rope, and manual
     <hr>
     <a href="https://www.mountainproject.com/" target="_blank">Mountain Project</a>
     <a href="https://www.climbing.com/" target="_blank">Climbing Website</a>
-
+    
     <p>&copy;2023 Hello World/Intro to html</p>   
 </body>
 </html>
