--- a/index.html
+++ b/index.html
@@ -4,39 +4,12 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Hello World/Intro to html</title>
-    <style>
-    Body {
-        background-color:darkgrey
-    }
-    
-    img {
-       width:80%;
-    }
- </style>
+    <title>Basic Web Project page</title>
 </head>
 <body>
-    <h1>The Sport of Climbing</h1>
-    <hr>
-    <img src="images/Sportclimbing3.jpg" alt="Rope through carabiners">
-    <hr>
-    <h2>Welcome to my first site!</h2>
-
-<p>Sport climbing: the act of climbing single- or multi-pitch routes, protected by permanently-fixed bolts and anchors drilled into the rock,
-using a rope and the aid of a belayer.
-The main difference between sport climbing and bouldering is the height of the routes being climbed,
-and the form of protection (bouldering = no ropes, with crash pads). 
- 
- Likewise, 
-traditional climbing calls for the use of temporary gear and anchors (ex. nuts, camalots, etc.) to protect the climber,
-as opposed to permanent ones used in sport climbing.The sport climbing process itself is relatively simple. A climber and a belayer tie into one end of a single rope,
-with a few meters of rope between them. 
-As the climbers ascends the route, s/he clips into carabiners spaced intermittently up the wall, each of which act as anchors to protect the climber from falls.
-As the climber climbs, the belayer “feeds” him slack in the rope, and manually brakes any falls with the aid of a belay device.</p>
-    <hr>
-    <a href="https://www.mountainproject.com/" target="_blank">Mountain Project</a>
-    <a href="https://www.climbing.com/" target="_blank">Climbing Website</a>
-
-    <p>&copy;2023 Hello World/Intro to html</p>   
+    <h1>Basic Web Project Page</h1>
+    <ul>
+    <li><a href="intro_to_html/index.html" target="_blank">intro_to_html</a></li>
+    </ul>
 </body>
 </html>
