--- a/intro_to_html/index.html
+++ b/intro_to_html/index.html
@@ -9,16 +9,15 @@
     Body {
         background-color:darkgrey
     }
-    
-    img  {
-       width: 80%;
+    img{
+        width: 100;
     }
- <style>
+ </style>
 </head>
 <body>
     <h1>The Sport of Climbing</h1>
     <hr>
-    <img src="images/Sportclimbing3.jpg" alt="Rope through carabiners">
+    <img src="images/climbing.jpg" alt="Rope through carabiners">
     <hr>
     <h2>Welcome to my first site!</h2>
 
