--- a/intro_to_html/index.html
+++ b/intro_to_html/index.html
@@ -6,11 +6,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Hello World/Intro to html</title>
     <style>
-    Body {
-        background-color:darkgrey
+    body {
+        background-color:darkgrey;
     }
     img{
-        width: 100;
+        width: 50%;
     }
  </style>
 </head>
