--- a/intro_to_html/index.html
+++ b/intro_to_html/index.html
@@ -10,14 +10,14 @@
         background-color:darkgrey;
     }
     img{
-        width: 35%;
+        width: 15%;
     }
  </style>
 </head>
 <body>
     <h1>The Sport of Climbing</h1>
     <hr>
-    <img src="images/climbing.jpg" alt="Rope through carabiners">
+    <img src="images/Sportclimbing.jpg" alt="Rope through carabiners">
     <hr>
     <h2>Welcome to my first site!</h2>
 
