--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
     <h1>Basic Web Project Page</h1>
     <ul>
     <li><a href="intro_to_html/index.html" target="_blank">intro_to_html</a></li>
+    <li><a href="html5_css/index.html" target="_blank">HTML5_CSS</a></li>
     </ul>
 </body>
 </html>
