--- a/advanced css and tables/whatwedo.html
+++ b/advanced css and tables/whatwedo.html
@@ -22,7 +22,7 @@
 
         <li><a href="index.html">Our Mission</a></li>
         <li><a href="whatwedo.html">What We Do</a></li>
-        <li><a href="bob.html">The Final Frontier</a></li>
+        <li><a href="thefinalfrontier.html">The Final Frontier</a></li>
 
             </ul>
            
