--- a/index.html
+++ b/index.html
@@ -11,6 +11,9 @@
     <ul>
     <li><a href="intro_to_html/index.html" target="_blank">intro_to_html</a></li>
     <li><a href="html5_css/index.html" target="_blank">HTML5_CSS</a></li>
+    <li><a href="advanced css and tables/index.html" target="_blank">Advanced CSS</a></li>
+    
+
     </ul>
 </body>
 </html>
