--- a/advanced css and tables/index.html
+++ b/advanced css and tables/index.html
@@ -22,7 +22,7 @@
                 <ul>
         <li><a href="index.html">Our Mission</a></li>
         <li><a href="whatwedo.html">What We Do</a></li>
-        <li><a href="finalfrontier.html">The Final Frontier</a></li>
+        <li><a href="thefinalfrontier.html">The Final Frontier</a></li>
                 </ul>
            
     </nav>
@@ -49,13 +49,12 @@
             </section>
     <aside>
         <h2>Our Prices</h2>
-        <li>Platinum - 5 MillionUSD - Includes all lower packages with a flyby of Mars.</li>
-
+        <ul>
+        <li>Platinum - 5 MillionUSD - Includes all lower packages with a flyby of Mars. </li>
         <li>Gold - 1 MillionUSD - Includes Fueling, Food, and roundtrip accomodations to the Moons orbit.</li>
-
         <li>Silver - 500,000USD - Includes fueling, Food, and roundtrip accomodations to the ISS.</li>
-
         <li>Bronze - 150,000USD - Includes Fueling, and accomodations to Low Earth Orbit.</li>
+        </ul>
     </aside>
     </main>
 <div id="lower_area">
@@ -72,11 +71,11 @@
     </div> 
     <div>
         <div class="col">
-        <h3>The future</h3>
+        <h3>The Final Frontier</h3>
         <p> Our state-of-the-art spacecraft are equipped with the latest technology and designed to provide maximum comfort and safety during your journey. 
             Our highly trained and experienced crew will guide you through every step of the way, ensuring that your trip is both thrilling and unforgettable.</p>
             <img src="images/planets.jpg" alt="night sky">
-            <a class="button" href="thefuture.html">What We Do</a> 
+            <a class="button" href="thefinalfrontier.html">The Final Frontier</a> 
     </div>
         <div class="col">
         <h3>Testimonials</h3>
@@ -86,10 +85,9 @@
         "As we soared through the cosmos, I was amazed by the breathtaking views of Earth and the surrounding galaxies. 
         The feeling of weightlessness was surreal, and I felt like I was floating on a cloud."</p>
             <img src="images/nightsky.jpg" alt="night sky">
-            </div>      <a class="button" href="finalfrontier.html">The Final Frontier</a> 
+            </div><a class="button" href="thefinalfrontier.html">The Final Frontier</a> 
         </div>
-    <footer>&copy; 2023 The Space Travel Agency</footer>
     </div>    
 </body>
-
+<footer>&copy; 2023 The Space Travel Agency</footer>
 </html>
