--- a/advanced css and tables/ourmission.html
+++ b/advanced css and tables/ourmission.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="CSS/styles.css">
 </head>
 <body>
-<div id="container">
+    <div id="container">
         <header>
             <h1>Welcome to The Space Travel Agency</h1>
             <h4>To the Stars</h4>
@@ -56,7 +56,7 @@
             <img src="images/colr.jpg" alt="Space Station">
             <a class="button" href="ourmission.html">Our Mission</a> 
     </div> 
-    <div>
+        <div>
         <div class="col">
         <h3>The future</h3>
         <p> Our state-of-the-art spacecraft are equipped with the latest technology and designed to provide maximum comfort and safety during your journey. 
@@ -77,10 +77,9 @@
             Security Officer - Tyler Wong
             Logistics Officer - Olivia Taylor</p>
             <img src="images/tourist.jpg" alt="night sky">
-            <a class="button" href="finalfrontier.html">The Final Frontier</a> 
-    </div>
-    <footer>&copy; 2023 The Space Travel Agency</footer>
-</div>    
+            <a class="button" href="thefinalfrontier.html">The Final Frontier</a> 
+        </div>
+    </div>    
 </body>
-
+<footer>&copy; 2023 The Space Travel Agency</footer>
 </html>
