--- a/advanced css and tables/whatwedo.html
+++ b/advanced css and tables/whatwedo.html
@@ -55,13 +55,13 @@
             <hr>
             <img src="images/view.jpg" alt="Space Station">
             <hr>
-            <a class="button" href="whatwedo.html">The final Frontier</a> 
+            <a class="button" href="whatwedo.html">The Final Frontier</a> 
     </div> 
     <div>
         <div class="col">
       
             <img src="images/inside.jpg" alt="night sky">
-            <a class="button" href="whatwedo.html">Gallery</a> 
+            <a class="button" href="whatwedo.html">about</a> 
     </div>
         <div class="col">
         <h3>Our Crew</h3>
@@ -76,10 +76,11 @@
             Security Officer - Tyler Wong
             Logistics Officer - Olivia Taylor</p>
             <img src="images/tourist.jpg" alt="night sky">
-            <a class="button" href="finalfrontier.html">The Final Frontier</a> 
+            <a class="button" href="thefinalfrontier.html">The Final Frontier</a> 
+        </div>
     </div>
-    <footer>&copy; 2023 The Space Travel Agency</footer>
-</div>    
+
 </body>
+<footer>&copy; 2023 The Space Travel Agency</footer>
 
 </html>
