--- a/html5_css/index.html
+++ b/html5_css/index.html
@@ -49,7 +49,7 @@
 
         </ul>
     </main>
-    <footer>&copy;2023 HTML5 and Introduction to CSS</footer>
+    <footer>&copy;2023 HTML and Introduction to CSS</footer>
 </body>
 
 </html>
