--- a/advanced css and tables/index.html
+++ b/advanced css and tables/index.html
@@ -88,6 +88,7 @@
             </div><a class="button" href="thefinalfrontier.html">The Final Frontier</a> 
         </div>
     </div>
+</div>
+    <footer>&copy; 2023 The Space Travel Agency</footer>
 </body>
-<footer>&copy; 2023 The Space Travel Agency</footer>
 </html>
