--- a/advanced css and tables/whatwedo.html
+++ b/advanced css and tables/whatwedo.html
@@ -78,7 +78,7 @@
             <a class="button" href="thefinalfrontier.html">The Final Frontier</a> 
         </div>
     </div>
-
-</body>
+</div>
 <footer>&copy; 2023 The Space Travel Agency</footer>
+</body>
 </html>
