--- a/advanced css and tables/thefinalfrontier.html
+++ b/advanced css and tables/thefinalfrontier.html
@@ -32,16 +32,17 @@
         <table>
             <tr>
                 <td><img src="images/jupiter.jpg" alt="Portal with astronauts"></td>
-                <td><img src="images/merlin_145026177_f24c9044-c502-4a84-b4de-3bbe11fecfe5-superJumbo.webp">Planet Surface</td>
+                <td><img src="images/merlin_145026177_f24c9044-c502-4a84-b4de-3bbe11fecfe5-superJumbo.webp" alt="view from space"></td>
+                
             </tr>
             <tr>
-                <td><img src="images/mars.jpg" alt="Portal with astronauts"></td>
-                <td><img src="images/mercury.jpg">Planet Surface</td>
+                <td><img src="images/mars.jpg" alt="Portal with astronauts" alt="astronauts" ></td>
+                <td><img src="images/mercury.jpg" alt="mercury"></td>
             </tr>
             <tr>
                 <td><img src="images/n.png" alt="Portal with astronauts"></td>
-                <td><img src="images/bluelight.jpg">Planet Surface</td>
-            </tr>s
+                <td><img src="images/bluelight.jpg" alt="Blue planet"></td>
+            </tr>
         </table>
         </section>
     </main>
