--- a/advanced css and tables/whatwedo.html
+++ b/advanced css and tables/whatwedo.html
@@ -75,10 +75,10 @@
             Security Officer - Tyler Wong
             Logistics Officer - Olivia Taylor</p>
             <img src="images/tourist.jpg" alt="night sky">
-            <a class="button" href="thefinalfrontier.html">The Final Frontier</a> 
+           </div><a class="button" href="thefinalfrontier.html">The Final Frontier</a> 
         </div>
     </div>
 </div>
-<footer>&copy; 2023 The Space Travel Agency</footer>
+    <footer>&copy; 2023 The Space Travel Agency</footer>
 </body>
 </html>
