--- a/advanced css and tables/thefinalfrontier.html
+++ b/advanced css and tables/thefinalfrontier.html
@@ -36,7 +36,7 @@
                 
             </tr>
             <tr>
-                <td><img src="images/mars.jpg" alt="Portal with astronauts" alt="astronauts" ></td>
+                <td><img src="images/mars.jpg" alt="Portal with astronauts"></td>
                 <td><img src="images/mercury.jpg" alt="mercury"></td>
             </tr>
             <tr>
