--- a/advanced css and tables/index.html
+++ b/advanced css and tables/index.html
@@ -85,7 +85,7 @@
         "As we soared through the cosmos, I was amazed by the breathtaking views of Earth and the surrounding galaxies. 
         The feeling of weightlessness was surreal, and I felt like I was floating on a cloud."</p>
             <img src="images/nightsky.jpg" alt="night sky">
-            </div><a class="button" href="thefinalfrontier.html">The Final Frontier</a> 
+            </div><a class="button" href="thefinalfrontier.html">The Future</a> 
         </div>
     </div>
 </div>
