--- a/advanced css and tables/ourmission.html
+++ b/advanced css and tables/ourmission.html
@@ -21,8 +21,8 @@
             <ul>
 
         <li><a href="index.html">Our Mission</a></li>
-        <li><a href="random.html">What We Do</a></li>
-        <li><a href="bob.html">The Final Frontier</a></li>
+        <li><a href="whatwedo.html">What We Do</a></li>
+        <li><a href="thefinalfrontier.html">The Final Frontier</a></li>
 
             </ul>
            
