what we do edit

--- a/advanced css and tables/ourmission.html
+++ b/advanced css and tables/ourmission.html
@@ -62,7 +62,7 @@
         <p> Our state-of-the-art spacecraft are equipped with the latest technology and designed to provide maximum comfort and safety during your journey. 
             Our highly trained and experienced crew will guide you through every step of the way, ensuring that your trip is both thrilling and unforgettable.</p>
             <img src="images/planets.jpg" alt="night sky">
-            <a class="button" href="thefuture.html">What We Do</a> 
+            <a class="button" href="whatwedo.html">What We Do</a> 
     </div>
         <div class="col">
         <h3>Our Crew</h3>
