--- a/Responsive web design/contact.html
+++ b/Responsive web design/contact.html
@@ -1,21 +1,19 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <meta charset="UTF-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>The Space Travel Agency</title>
     <link
       rel="shortcut icon"
       href="images/337490123_2210894742452364_1389335041583568698_n.png"
-      type="image/x-icon"
-    />
+      type="image/x-icon">
     <link
       rel="icon"
       href="images/337490123_2210894742452364_1389335041583568698_n.png"
-      type="image/x-icon"
-    />
-    <link rel="stylesheet" href="CSS/styles.css" />
+      type="image/x-icon">
+    <link rel="stylesheet" href="CSS/styles.css">
   </head>
   <body>
     <div id="container">
@@ -23,7 +21,7 @@
         <h1>Welcome to The Space Travel Agency</h1>
         <h4>To the Stars</h4>
 
-        <img src="images/logo.jpg" alt="The Space Travel Agency" />
+        <img src="images/logo.jpg" alt="The Space Travel Agency">
       </header>
 
       <nav>
@@ -37,26 +35,26 @@
 
       <main>
         <section>
-          <img src="images/triangle.jpg" alt="Colorful Traingles" />
+          <img src="images/triangle.jpg" alt="Colorful Traingles">
 
           <p>
             <b>Address:</b>
             The Space Travel Agency 1 Interstellar rd Houston, TX 77001 United
             States
-            <br />
-            <br />
+            <br>
+            <br>
             <b>Mailing Address:</b>
             The Space Travel Agency P.O. Box 5678 Houston, TX 77002 United
             States
-            <br />
-            <br />
+            <br>
+            <br>
             <b>Email:</b>
-            <br />
+            <br>
             Contact@Thespace-trvlagencyusa.com
-            <br />
-            <br />
+            <br>
+            <br>
             <b>Phone</b>
-            <br />
+            <br>
             1-800-SPACE-TRVL (1-800-772-2387)
           </p>
         </section>
@@ -94,9 +92,9 @@
             well as a repeat customer. Want to learn more?. Click The Final
             Frontier for more info!
           </p>
-          <img src="images/station.jpg" alt="night sky" />
-          <img src="images/interior.jpg" alt="Space Selfie" />
-          <img src="images/spacestation.jpg" alt="Space Station" />
+          <img src="images/station.jpg" alt="night sky">
+          <img src="images/interior.jpg" alt="Space Selfie">
+          <img src="images/spacestation.jpg" alt="Space Station">
           <a class="button" href="ourmission.html">Our Mission</a>
         </div>
         <div>
@@ -109,10 +107,9 @@
               guide you through every step of the way, ensuring that your trip
               is both thrilling and unforgettable.
             </p>
-            <img src="images/white.jpg" alt="night sky" />
+            <img src="images/white.jpg" alt="night sky">
             <a class="button" href="thefinalfrontier.html"
-              >The Final Frontier</a
-            >
+              >The Final Frontier</a>
           </div>
           <div class="col">
             <h3>Testimonials</h3>
@@ -124,7 +121,7 @@
               galaxies. The feeling of weightlessness was surreal, and I felt
               like I was floating on a cloud."
             </p>
-            <img src="images/contactus.jpg" alt="night sky" />
+            <img src="images/contactus.jpg" alt="night sky">
           </div>
           <a class="button" href="contact.html">Contact Us</a>
         </div>
