--- a/Responsive web design/thefinalfrontier.html
+++ b/Responsive web design/thefinalfrontier.html
@@ -1,11 +1,11 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <meta charset="UTF-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>The Space Travel Agency</title>
-    <link rel="stylesheet" href="CSS/styles.css" />
+    <link rel="stylesheet" href="CSS/styles.css">
   </head>
   <body>
     <div id="container">
@@ -13,7 +13,7 @@
         <h1>Welcome to The Space Travel Agency</h1>
         <h4>To the Stars</h4>
 
-        <img src="images/logo.jpg" alt="The Space Travel Agency" />
+        <img src="images/logo.jpg" alt="The Space Travel Agency">
       </header>
 
       <nav>
@@ -29,26 +29,18 @@
           <h2>The Final Frontier</h2>
           <table>
             <tr>
-              <td>
-                <img src="images/jupiter.jpg" alt="Portal with astronauts" />
-              </td>
-              <td>
-                <img
-                  src="images/merlin_145026177_f24c9044-c502-4a84-b4de-3bbe11fecfe5-superJumbo.webp"
-                  alt="view from space"
-                />
-              </td>
-            </tr>
-            <tr>
-              <td>
-                <img src="images/mars.jpg" alt="Portal with astronauts" />
-              </td>
-              <td><img src="images/mercury.jpg" alt="mercury" /></td>
-            </tr>
-            <tr>
-              <td><img src="images/n.png" alt="Portal with astronauts" /></td>
-              <td><img src="images/bluelight.jpg" alt="Blue planet" /></td>
-            </tr>
+              <td><img src="images/jupiter.jpg" alt="Portal with astronauts"></td>
+              <td><img src="images/merlin_145026177_f24c9044-c502-4a84-b4de-3bbe11fecfe5-superJumbo.webp" alt="view from space"></td>
+              
+          </tr>
+          <tr>
+              <td><img src="images/mars.jpg" alt="Portal with astronauts"></td>
+              <td><img src="images/mercury.jpg" alt="mercury"></td>
+          </tr>
+          <tr>
+              <td><img src="images/n.png" alt="Portal with astronauts"></td>
+              <td><img src="images/bluelight.jpg" alt="Blue planet"></td>
+          </tr>
           </table>
         </section>
       </main>
@@ -65,9 +57,9 @@
             well as a repeat customer. Want to learn more?. Click The Final
             Frontier for more info!
           </p>
-          <img src="images/shuttle.jpg" alt="night sky" />
-          <img src="images/space-selfie.jpg" alt="Space Selfie" />
-          <img src="images/spacestation.jpg" alt="Space Station" />
+          <img src="images/shuttle.jpg" alt="night sky">
+          <img src="images/space-selfie.jpg" alt="Space Selfie">
+          <img src="images/spacestation.jpg" alt="Space Station">
           <a class="button" href="ourmission.html">Our Mission</a>
         </div>
         <div>
@@ -80,7 +72,7 @@
               guide you through every step of the way, ensuring that your trip
               is both thrilling and unforgettable.
             </p>
-            <img src="images/planets.jpg" alt="night sky" />
+            <img src="images/planets.jpg" alt="night sky">
             <a class="button" href="whatwedo.html">What We Do</a>
           </div>
           <div class="col">
@@ -93,7 +85,7 @@
               galaxies. The feeling of weightlessness was surreal, and I felt
               like I was floating on a cloud."
             </p>
-            <img src="images/nightsky.jpg" alt="night sky" />
+            <img src="images/nightsky.jpg" alt="night sky">
           </div>
           <a class="button" href="contact.html">Contact Us</a>
         </div>
