--- a/Responsive web design/whatwedo.html
+++ b/Responsive web design/whatwedo.html
@@ -1,11 +1,11 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <meta charset="UTF-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>The Space Travel Agency</title>
-    <link rel="stylesheet" href="CSS/styles.css" />
+    <link rel="stylesheet" href="CSS/styles.css">
   </head>
   <body>
     <div id="container">
@@ -13,7 +13,7 @@
         <h1>Welcome to The Space Travel Agency</h1>
         <h4>To the Stars...and Beyond</h4>
 
-        <img src="images/logo.jpg" alt="The Space Travel Agency" />
+        <img src="images/logo.jpg" alt="The Space Travel Agency">
       </header>
 
       <nav>
@@ -40,26 +40,22 @@
             We trust YOU!.
           </p>
 
-          <img
-            id="main_img_resize"
-            src="images/atstronauts.png"
-            alt="view of earth from space"
-          />
+          <img id="main_img_resize" src="images/atstronauts.png" alt="view of earth from space">
         </section>
       </main>
       <div id="lower_area">
         <div class="col">
-          <img src="images/earth23.jpg" alt="night sky" />
-          <hr />
-          <img src="images/view1.jpg" alt="Space Selfie" />
-          <hr />
-          <img src="images/view.jpg" alt="Space Station" />
-          <hr />
+          <img src="images/earth23.jpg" alt="night sky">
+          <hr>
+          <img src="images/view1.jpg" alt="Space Selfie">
+          <hr>
+          <img src="images/view.jpg" alt="Space Station">
+          <hr>
           <a class="button" href="whatwedo.html">The Final Frontier</a>
         </div>
         <div>
           <div class="col">
-            <img src="images/inside.jpg" alt="night sky" />
+            <img src="images/inside.jpg" alt="night sky">
             <a class="button" href="whatwedo.html">about</a>
           </div>
           <div class="col">
@@ -71,7 +67,7 @@
               Green Navigation Officer - Emily Chen Security Officer - Tyler
               Wong Logistics Officer - Olivia Taylor
             </p>
-            <img src="images/tourist.jpg" alt="night sky" />
+            <img src="images/tourist.jpg" alt="night sky">
           </div>
           <a class="button" href="contact.html">Contact Us</a>
         </div>
