--- a/Responsive web design/index.html
+++ b/Responsive web design/index.html
@@ -1,13 +1,13 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <meta charset="UTF-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>The Space Travel Agency</title>
     <link rel="shortcut icon" href="images/337490123_2210894742452364_1389335041583568698_n.png" type="image/x-icon">
 <link rel="icon" href="images/337490123_2210894742452364_1389335041583568698_n.png" type="image/x-icon">
-    <link rel="stylesheet" href="CSS/styles.css" />
+    <link rel="stylesheet" href="CSS/styles.css">
   </head>
   <body>
     <div id="container">
@@ -15,7 +15,7 @@
         <h1>Welcome to The Space Travel Agency</h1>
         <h4>To the Stars</h4>
 
-        <img src="images/logo.jpg" alt="The Space Travel Agency" />
+        <img src="images/logo.jpg" alt="The Space Travel Agency">
       </header>
 
       <nav>
@@ -41,7 +41,7 @@
             fit for a Head of State. Ready to join us?.
           </p>
 
-          <img src="images/earth2.jpg" alt="view of earth from space" />
+          <img src="images/earth2.jpg" alt="view of earth from space">
 
           <p>
             Our safety track record, as well as our dedication to safety ensures
@@ -85,9 +85,9 @@
             well as a repeat customer. Want to learn more?. Click The Final
             Frontier for more info!
           </p>
-          <img src="images/shuttle.jpg" alt="night sky"/>
-          <img src="images/space-selfie.jpg" alt="Space Selfie"/>
-          <img src="images/ground.jpg" alt="Space Selfie"/>
+          <img src="images/shuttle.jpg" alt="night sky">
+          <img src="images/space-selfie.jpg" alt="Space Selfie">
+          <img src="images/ground.jpg" alt="Space Selfie">
           <a class="button" href="ourmission.html">Our Mission</a>
         </div>
         <div>
@@ -100,10 +100,8 @@
               guide you through every step of the way, ensuring that your trip
               is both thrilling and unforgettable.
             </p>
-            <img src="images/planets.jpg" alt="night sky" />
-            <a class="button" href="thefinalfrontier.html"
-              >The Final Frontier</a
-            >
+            <img src="images/planets.jpg" alt="night sky">
+            <a class="button" href="thefinalfrontier.html">The Final Frontier</a>
           </div>
           <div class="col">
             <h3>Testimonials</h3>
@@ -115,7 +113,7 @@
               galaxies. The feeling of weightlessness was surreal, and I felt
               like I was floating on a cloud."
             </p>
-            <img src="images/contactus.jpg" alt="night sky" />
+            <img src="images/contactus.jpg" alt="night sky">
           </div>
           <a class="button" href="contact.html">Contact Us</a>
         </div>
