--- a/Responsive web design/contact.html
+++ b/Responsive web design/contact.html
@@ -108,8 +108,7 @@
               is both thrilling and unforgettable.
             </p>
             <img src="images/white.jpg" alt="night sky">
-            <a class="button" href="thefinalfrontier.html"
-              >The Final Frontier</a>
+            <a class="button" href="thefinalfrontier.html">The Final Frontier</a>
           </div>
           <div class="col">
             <h3>Testimonials</h3>
