--- a/Responsive web design/whatwedo.html
+++ b/Responsive web design/whatwedo.html
@@ -67,7 +67,7 @@
               Green Navigation Officer - Emily Chen Security Officer - Tyler
               Wong Logistics Officer - Olivia Taylor
             </p>
-            <img src="images/tourist.jpg" alt="night sky">
+            <img src="images/earth2.jpg" alt="night sky">
           </div>
           <a class="button" href="contact.html">Contact Us</a>
         </div>
