--- a/Responsive web design/ourmission.html
+++ b/Responsive web design/ourmission.html
@@ -67,7 +67,7 @@
     </div>
         <div class="col">
         <h3>Our Crew</h3>
-        <p>Captain - John Smith
+        <p>Captain - John Johnson
             Commander - Ava Garcia
             Pilot - David Johnson
             Engineer - Samantha Lee
