--- a/Responsive web design/thefinalfrontier.html
+++ b/Responsive web design/thefinalfrontier.html
@@ -85,7 +85,7 @@
               galaxies. The feeling of weightlessness was surreal, and I felt
               like I was floating on a cloud."
             </p>
-            <img src="images/nightsky.jpg" alt="night sky">
+            <img src="images/blue.jpg" alt="night sky">
           </div>
           <a class="button" href="contact.html">Contact Us</a>
         </div>
