Project Fixed thank God almighty

--- a/advanced css and tables/thefinalfrontier.html
+++ b/advanced css and tables/thefinalfrontier.html
@@ -28,7 +28,7 @@
    </nav>
     <main>
         <section class="single_page">
-        <h2>The Final Frontier</h2>
+        <h2>The Final frontier</h2>
         <table>
             <tr>
                 <td><img src="images/jupiter.jpg" alt="Portal with astronauts"></td>
