--- a/advanced css and tables/whatwedo.html
+++ b/advanced css and tables/whatwedo.html
@@ -64,7 +64,7 @@
     </div>
         <div class="col">
         <h3>Our Crew</h3>
-        <p>Captain - John Smith
+        <p>Captain - John Ho
             Commander - Ava Garcia
             Pilot - David Johnson
             Engineer - Samantha Lee
