Responsive web design

--- a/Responsive web design/whatwedo.html
+++ b/Responsive web design/whatwedo.html
@@ -10,7 +10,7 @@
   <body>
     <div id="container">
       <header>
-        <h1>Welcome to The Space Travel Agency</h1>
+        <h1>Welcome To The Space Travel Agency</h1>
         <h4>To the Stars...and Beyond</h4>
 
         <img src="images/logo.jpg" alt="The Space Travel Agency">
