Advanced CSS and tables

--- a/intro_to_html/index.html
+++ b/intro_to_html/index.html
@@ -11,7 +11,7 @@
     <h1>Basic Web Project Page</h1>
 
     <ul>
-        <li>Introduction to HTML</li>
+        <li><a href="advanced css and tables/index.html">Advanced CSS and Tables</a></h1></li>
         
     </ul>
 
