--- a/intro_to_html/index.html
+++ b/intro_to_html/index.html
@@ -12,6 +12,8 @@
 
     <ul>
         <li><a href="advanced css and tables/index.html">Advanced CSS and Tables</a></h1></li>
+        <li><a href="Responsive web design/index.html">Responsive Web design</a></h1></li>
+        <li><a href="html5_css/index.html">HTML5_CSS</a></h1></li>
         
     </ul>
 
