--- a/intro_to_html/index.html
+++ b/intro_to_html/index.html
@@ -8,7 +8,7 @@
 </head>
 
 <body>
-    <h1>Basic Web Project Page</h1>
+    <h1>Basic Web Project page</h1>
 
     <ul>
         <li><a href="advanced css and tables/index.html">Advanced CSS and Tables</a></h1></li>
