--- a/intro_to_html/Responsive web design/contact.html
+++ b/intro_to_html/Responsive web design/contact.html
@@ -35,6 +35,7 @@
 
       <main>
         <section>
+          <h2>Contact Us</h2>
           <img src="images/triangle.jpg" alt="Colorful Traingles">
 
           <p>
