--- a/intro_to_html/Responsive web design/contact.html
+++ b/intro_to_html/Responsive web design/contact.html
@@ -34,8 +34,9 @@
       </nav>
 
       <main>
+        <h2>Contact Us!</h2>
         <section>
-          <h2>Contact Us</h2>
+          <h3>How to contact us</h3>
           <img src="images/triangle.jpg" alt="Colorful Traingles">
 
           <p>
