--- a/Final Project/unitedstates.html
+++ b/Final Project/unitedstates.html
@@ -97,7 +97,7 @@
                     than I ever could have imagined. I went to college in Lexington, which was a big adjustment for me.
                     I had never been around so many people from different backgrounds and cultures before.
                     But I quickly adapted and made some great friends.</p>
-                <img src="images/barn.jpg" alt="Barn in fields">
+                <img src="images/barn.jpg" alt="Barn in fields" 
             </section>
         </main>
         <div id="lower_area">
@@ -112,8 +112,11 @@
                 <div class="col">
                 </div>
                 <div class="col">
+
                 </div>
             </div>
         </div>
          <footer>&copy; 2023 Final Project/The Faces of Humanity</footer>
 </body>
+
+</html>
