--- a/intro_to_html/index.html
+++ b/intro_to_html/index.html
@@ -11,10 +11,7 @@
     <h1>Basic Web Project page</h1>
 
     <ul>
-        <li><a href="advanced css and tables/index.html">Advanced CSS and Tables</a></li>
-        <li><a href="Responsive web design/index.html">Responsive Web design</a></li>
-        <li><a href="html5_css/index.html">HTML5_CSS</a></li>
-        <li><a href="Final Project/index.html">Final project</a></li> 
+        <li><a href="Final Project/index.html">Final Project</a></li> 
     </ul> 
 </body>
 </html>
