--- a/Final Project/unitedstates.html
+++ b/Final Project/unitedstates.html
@@ -1,6 +1,5 @@
 <!DOCTYPE html>
 <html lang="en">
-
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -15,17 +14,13 @@
     <link rel="icon" type="image/png" sizes="16x16" href="images/android-chrome-192x192.png">
     <link rel="manifest" href="images/android-chrome-192x192.png">
     <link rel="stylesheet" href="CSS/styles.css">
-
 </head>
-
 <body>
     <div id="container">
         <header>
             <h1>The Faces of Humanity</h1>
             <img src="images/anim.gif" alt="Gif">
-
         </header>
-
         <nav>
             <ul>
                 <li><a href="index.html">Home</a></li>
@@ -34,17 +29,11 @@
                 <li><a href="europe.html">Europe</a></li>
                 <li><a href="contact.html">Contact</a></li>
             </ul>
-
         </nav>
         <h4>United States</h4>
-
         <main>
-           
-
+        <section>
             <section class="single_page">
-            
-
-
                 <h2>John</h2>
                 <p>"My name is John, and I'm a farmer living on a small farm in rural Iowa. I've spent most of my life
                     working the land,
@@ -55,9 +44,7 @@
                     I grew up here, and from the time I was old enough to walk, I was out in the fields helping my dad
                     and grandpa."</p>
                     <hr>
-
                 <img id="main_img_resize" src="images/Old-Farmer.jpg" alt="Old Old-Farmer">
-
                 <p>"Is it hard? Sure, there are days when I'm exhausted and I wonder why I do this. But then I look
                     around at the beautiful land I get to call home,
                     and I remember that this is who I am. I'm a farmer, and I wouldn't have it any other way. My grandad
@@ -97,7 +84,7 @@
                     than I ever could have imagined. I went to college in Lexington, which was a big adjustment for me.
                     I had never been around so many people from different backgrounds and cultures before.
                     But I quickly adapted and made some great friends.</p>
-                <img src="images/barn.jpg" alt="Barn in fields" 
+                <img src="images/barn.jpg" alt="Barn in fields">
             </section>
         </main>
         <div id="lower_area">
@@ -112,11 +99,10 @@
                 <div class="col">
                 </div>
                 <div class="col">
-
+                    </div>
                 </div>
             </div>
         </div>
          <footer>&copy; 2023 Final Project/The Faces of Humanity</footer>
 </body>
-
 </html>
