--- a/Final Project/asia.html
+++ b/Final Project/asia.html
@@ -77,23 +77,22 @@
         <div class="col">
           <h4>Mai-Zhou</h4>
           <p>Today, I spent most of the day tending to my garden, and it brought back memories of my childhood in rural China. I remember the hours I spent with my grandmother, learning about the various herbs and vegetables that she grew, and how to tend to them with care.
-
             As I grow older, I find myself relying more and more on the traditions and practices that my grandmother taught me. Whether it's brewing a pot of herbal tea to soothe my nerves, or preparing a traditional dish to share with my family, 
             I am always grateful for the knowledge that has been passed down to me.<br>
+            </p>
             <hr>
             <img src="images/old.jpg" alt="Older Asian woman">
             <hr>
-            I often think about how much the world has changed since I was a young girl. Technology has advanced at an incredible pace, and the world has become more connected than ever before. But despite all these changes, I believe that the teachings of my grandmother remain as relevant as ever.
-            
+            <p>
+            I often think about how much the world has changed since I was a young girl. Technology has advanced at an incredible pace, and the world has become more connected than ever before. But despite all these changes, 
+            I believe that the teachings of my grandmother remain as relevant as ever.
             As I reflect on my life, I feel a sense of pride in the values and traditions that I have upheld. And although I may be older, I know that the lessons that I have learned will continue to guide me in the years to come.
             </p>
-        
           <a class="button" href="europe.html">Europe</a>
         </div>
           </div>
         </div>
       </div>
-    </div>
     <footer>&copy; 2023 The Faces of Humanity</footer>
   </body>
 </html>
