--- a/Final Project/unitedstates.html
+++ b/Final Project/unitedstates.html
@@ -84,6 +84,7 @@
                     I had never been around so many people from different backgrounds and cultures before.
                     But I quickly adapted and made some great friends.</p>
                 <img src="images/barn.jpg" alt="Barn in fields">
+            </section>
         </main>
         <div id="lower_area">
             <div class="col">
