--- a/intro_to_html/Final Project/contact.html
+++ b/intro_to_html/Final Project/contact.html
@@ -21,7 +21,7 @@
         <h1>Contact</h1>
         
 
-        <img src="images/anim.gif" alt="The Space Travel Agency">
+        <img src="images/contact-us-gf0a1caabc_1920.png" alt="Contact Us">
       </header>
 
       <nav>
